# trilinos-speedup-test

./: CMakeLists.txt  submit-jobs-hopper
configure-scripts/: do-configure.fuji.sh  do-configure.hopper.sh
epetra/: CMakeLists.txt  poisson1d.cpp  strong-scaling-dotproduct.cpp  strong-scaling-medley.cpp
poisson/: CMakeLists.txt  poisson1d-epetra.cpp  poisson1d-tpetra.cpp  poisson1d.cpp
tpetra/: CMakeLists.txt  poisson1d.cpp
